First version of frontend - list accession numbers
