# api-server/openapi/model_inline_response_200.go
@@ -1,0 +1,33 @@
+/*
+ * MassBank Tool API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type InlineResponse200 struct {
+	TotalCount int32 `json:"totalCount,omitempty"`
+
+	Spectra []SpectrumListItem `json:"spectra,omitempty"`
+}
+
+// AssertInlineResponse200Required checks if the required fields are not zero-ed
+func AssertInlineResponse200Required(obj InlineResponse200) error {
+	return nil
+}
+
+// AssertRecurseInlineResponse200Required recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of InlineResponse200 (e.g. [][]InlineResponse200), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseInlineResponse200Required(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aInlineResponse200, ok := obj.(InlineResponse200)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertInlineResponse200Required(aInlineResponse200)
+	})
+}
